--- a/adapters/echoopenapi/testdata/petstore.yaml
+++ b/adapters/echoopenapi/testdata/petstore.yaml
@@ -7,7 +7,7 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: https://swagger.io/terms/
-  title: Test API Pet Store API
+  title: Echo OpenAPI
   version: 1.0.0
 externalDocs:
   description: Find more info here about swagger
