--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,56 +1,68 @@
-name: CI
+# .github/workflows/ci.yml
+name: 🔍 Continuous Integration
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, develop ]
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [ main, develop ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  golangci:
-    name: Lint
+  # ========================================
+  # Quality Gate
+  # ========================================
+  quality:
+    name: 🛡️ Quality Gate
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: '1.21'
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.3.0
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          args: --timeout=2m --verbose
-
-  test:
-    name: Unit Tests
-    needs: golangci
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: ['1.21', '1.22', '1.23', '1.24']
-      fail-fast: false
-    steps:
-    - name: Checkout code
+    - name: 📥 Checkout
       uses: actions/checkout@v4
-    - name: Set up Go
+      
+    - name: 🐹 Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.23'
+        cache: true
+        
+    - name: 🔧 Install Tools
+      run: make install-tools
+      
+    - name: ✅ Run Quality Checks
+      run: make check
+
+  # ========================================
+  # Test Matrix
+  # ========================================
+  test:
+    name: 🧪 Test (Go ${{ matrix.go-version }}, ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
+    needs: quality
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        go-version: ['1.23', '1.24']
+
+    steps:
+    - name: 📥 Checkout
+      uses: actions/checkout@v4
+
+    - name: 🐹 Setup Go
       uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
-    - name: Check Tidy
-      run: |
-          go mod tidy
-          git diff --exit-code go.mod go.sum
-    - name: Vet
-      run: go vet ./...
-    - name: Test
-      run: |
-          go test -v -cover -race ./... -coverprofile=coverage.txt
-          go tool cover -func=coverage.txt | grep total
-    - name: Upload coverage reports to Codecov
-      if: matrix.go-version == '1.21'
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        cache: true
+
+    - name: 🔧 Install Tools
+      run: make install-tools
+
+    - name: 🧪 Run Tests
+      run: make test-parallel
