--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
     - name: 🔧 Install Tools
       run: make install-tools
 
+    - name: 🔗 Sync Workspace
+      run: make sync tidy
+
     - name: 🏷️ Extract Version
       id: version
       run: |
@@ -50,10 +53,10 @@ jobs:
         fi
         echo "📋 Version: $VERSION"
         echo "🔖 Pre-release: $([[ $VERSION == *"-"* ]] && echo "true" || echo "false")"
-        
+
     - name: ✅ Run Release Quality Gate
       run: make check-release
-      
+
     - name: 🔍 Final Replace Statement Check
       run: make check-replace-strict
 
@@ -65,7 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     timeout-minutes: 5
-    
+
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v4
@@ -75,20 +78,14 @@ jobs:
     - name: 📝 Generate Changelog
       id: changelog
       run: |
-        if git tag --list | grep -q "v"; then
-          PREVIOUS_TAG=$(git tag --list "v*" --sort=-version:refname | grep -v "${{ needs.validate.outputs.version }}" | head -n1)
-          if [ -n "$PREVIOUS_TAG" ]; then
-            echo "## What's Changed" > changelog.md
-            echo "" >> changelog.md
-            git log --pretty=format:"- %s (%h)" "$PREVIOUS_TAG..${{ needs.validate.outputs.version }}" >> changelog.md
-          else
-            echo "## Initial Release" > changelog.md
-            echo "" >> changelog.md
-            echo "🎉 First release of the project!" >> changelog.md
-          fi
+        PREVIOUS_TAG=$(git tag --sort=-version:refname | grep '^v' | grep -v "${{ needs.validate.outputs.version }}" | head -n1 || true)
+        if [ -n "$PREVIOUS_TAG" ]; then
+          echo "## What's Changed" > changelog.md
+          echo "" >> changelog.md
+          git log --pretty=format:"- %s (%h)" "$PREVIOUS_TAG..${{ needs.validate.outputs.version }}" >> changelog.md
         else
           echo "## Initial Release" > changelog.md
-          echo "" >> changelog.md  
+          echo "" >> changelog.md
           echo "🎉 First release of the project!" >> changelog.md
         fi
 
@@ -102,4 +99,4 @@ jobs:
         body_path: changelog.md
         draft: false
         prerelease: ${{ needs.validate.outputs.is_prerelease }}
-        generate_release_notes: true
+        generate_release_notes: false  # Because we provide our own changelog
