--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,34 +19,28 @@ jobs:
     name: 🛡️ Quality Gate
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
+    
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v4
-
+      
     - name: 🐹 Setup Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
         cache: true
-
+        
     - name: 🔧 Install Tools
       run: make install-tools
-
-    - name: 🔗 Sync Workspace
-      run: make sync tidy
-
-    - name: ✅ Quality Checks (Lint + Test + Replace Check)
+      
+    - name: ✅ Run Quality Checks
       run: make check
-
-    - name: 🔒 Verify No Accidental Replace
-      run: make check-replace-strict
 
   # ========================================
   # Test Matrix
   # ========================================
   test:
-    name: 🧪 Test Matrix (Go ${{ matrix.go-version }}, ${{ matrix.os }})
+    name: 🧪 Test (Go ${{ matrix.go-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
     needs: quality
@@ -70,8 +64,5 @@ jobs:
     - name: 🔧 Install Tools
       run: make install-tools
 
-    - name: 🔗 Sync Workspace
-      run: make sync tidy
-
-    - name: 🧪 Run Parallel Tests
+    - name: 🧪 Run Tests in Parallel
       run: make test-parallel
