--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,6 @@ jobs:
     - name: 🔧 Install Tools
       run: make install-tools
 
-    - name: 🔗 Sync Workspace
-      run: make sync tidy
-
     - name: 🏷️ Extract Version
       id: version
       run: |
@@ -57,14 +54,11 @@ jobs:
     - name: ✅ Run Release Quality Gate
       run: make check-release
 
-    - name: 🔍 Final Replace Statement Check
-      run: make check-replace-strict
-
   # ========================================
   # Create GitHub Release
   # ========================================
   release:
-    name: 🎉 Create Release
+    name: 🎉 Create GitHub Release
     runs-on: ubuntu-latest
     needs: validate
     timeout-minutes: 5
@@ -78,18 +72,23 @@ jobs:
     - name: 📝 Generate Changelog
       id: changelog
       run: |
-        PREVIOUS_TAG=$(git tag --sort=-version:refname | grep '^v' | grep -v "${{ needs.validate.outputs.version }}" | head -n1 || true)
-        if [ -n "$PREVIOUS_TAG" ]; then
-          echo "## What's Changed" > changelog.md
-          echo "" >> changelog.md
-          git log --pretty=format:"- %s (%h)" "$PREVIOUS_TAG..${{ needs.validate.outputs.version }}" >> changelog.md
+        if git tag --list | grep -q "v"; then
+          PREVIOUS_TAG=$(git tag --list "v*" --sort=-version:refname | grep -v "${{ needs.validate.outputs.version }}" | head -n1)
+          if [ -n "$PREVIOUS_TAG" ]; then
+            echo "## What's Changed" > changelog.md
+            echo "" >> changelog.md
+            git log --pretty=format:"- %s (%h)" "$PREVIOUS_TAG..${{ needs.validate.outputs.version }}" >> changelog.md
+          else
+            echo "## Initial Release" > changelog.md
+            echo "" >> changelog.md
+            echo "🎉 First release of the project!" >> changelog.md
+          fi
         else
           echo "## Initial Release" > changelog.md
           echo "" >> changelog.md
           echo "🎉 First release of the project!" >> changelog.md
-        fi
 
-    - name: 🚀 Create GitHub Release
+    - name: 🚀 Publish GitHub Release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -99,4 +98,3 @@ jobs:
         body_path: changelog.md
         draft: false
         prerelease: ${{ needs.validate.outputs.is_prerelease }}
-        generate_release_notes: false  # Because we provide our own changelog
