fix: fix makefile and github action (#15)
* fix: fix makefile and github action

* fix: undefined make file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,5 +64,5 @@ jobs:
     - name: 🔧 Install Tools
       run: make install-tools
 
-    - name: 🧪 Run Tests
+    - name: 🧪 Run Tests in Parallel
       run: make test-parallel
