--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,22 +50,19 @@ jobs:
         fi
         echo "📋 Version: $VERSION"
         echo "🔖 Pre-release: $([[ $VERSION == *"-"* ]] && echo "true" || echo "false")"
-        
+
     - name: ✅ Run Release Quality Gate
       run: make check-release
-      
-    - name: 🔍 Final Replace Statement Check
-      run: make check-replace-strict
 
   # ========================================
   # Create GitHub Release
   # ========================================
   release:
-    name: 🎉 Create Release
+    name: 🎉 Create GitHub Release
     runs-on: ubuntu-latest
     needs: validate
     timeout-minutes: 5
-    
+
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v4
@@ -88,11 +85,10 @@ jobs:
           fi
         else
           echo "## Initial Release" > changelog.md
-          echo "" >> changelog.md  
+          echo "" >> changelog.md
           echo "🎉 First release of the project!" >> changelog.md
-        fi
 
-    - name: 🚀 Create GitHub Release
+    - name: 🚀 Publish GitHub Release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -102,4 +98,3 @@ jobs:
         body_path: changelog.md
         draft: false
         prerelease: ${{ needs.validate.outputs.is_prerelease }}
-        generate_release_notes: true
