--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 # .github/workflows/ci.yml
-name: 🔍 Continuous Integration
+name: 🔍 CI
 
 on:
   push:
@@ -19,20 +19,20 @@ jobs:
     name: 🛡️ Quality Gate
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v4
-      
+
     - name: 🐹 Setup Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
         cache: true
-        
+
     - name: 🔧 Install Tools
       run: make install-tools
-      
+
     - name: ✅ Run Quality Checks
       run: make check
 
@@ -40,7 +40,7 @@ jobs:
   # Test Matrix
   # ========================================
   test:
-    name: 🧪 Test (Go ${{ matrix.go-version }}, ${{ matrix.os }})
+    name: 🧪 Test Matrix
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
     needs: quality
