--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage.*
 *.coverprofile
 profile.cov
 junit.xml
+# Adapter coverage files  
+adapters/*/*-coverage.out
+adapters/*/*-coverage.html
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
